overflow bug fixed

--- a/src/modules/ArtistPage/styles.css
+++ b/src/modules/ArtistPage/styles.css
@@ -2,6 +2,7 @@
     min-height: 100vh;
     height: auto;
     background: linear-gradient(#3e065f, #000000);
+    overflow-x: hidden;
 }
 
 .artist-profile {
